# build-process-workshop

./: CMakeLists.txt  README.md  main.c
inc/: example.h
outputs/: .gitignore  example._c_preprocessed.txt  example.i  example.out  example.s  main.i  main.s  main_c_preprocessed.txt  output.out
src/: example.c
